--- a/app/public/home.html
+++ b/app/public/home.html
@@ -17,12 +17,12 @@
             <h3 class="font-weight-bold">Answer a few basic questions.</h3>
             <h3 class="font-weight-bold">Then find the friend with the greatest compatibility!</h3>
             <br>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Go to Survey</a>
+            <a class="btn btn-primary btn-lg" href="/survey" role="button">Go to Survey</a>
         </div>
 
-        
-
-
+        <footer class="footer">
+            <p><a href="#">API Friends List</a> | <a href="#">GitHub Repo</a></p>
+        </footer>
 
     </div>
 
